SEO and analytics

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Coworking space in Pasadena (Los Angeles), California. Shared office space designed for freeleancers, telecommuters, entrepreneurs, and startups.">
+    <meta name="keywords" content="coworking pasadena, pasadena coworking, coworking los angeles, los angeles coworking, pasadena shared office, pasadena barcamp, los angeles barcamp, pasadena bar camp, los angeles web developers, pasadena web developers, pasadena web incubator">
     <meta name="viewport" content="width=device-width">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href="{{ site.url }}/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
